--- a/kilim.html
+++ b/kilim.html
@@ -84,7 +84,7 @@ canvas{
 		*/
 	</script>
 
-	<script async type="text/javascript" src="space_kilim.js"></script>
+	<script async type="text/javascript" src="kilim.js"></script>
 	  
 	<script>
 		// key blocker. prevent cursor keys from scrolling page while playing cart.
